--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,12 @@
 			<version>1.5-SNAPSHOT</version>
 			<type>jar</type>
 			<scope>provided</scope>
-		</dependency>   
+		</dependency>
+		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+			<version>2.0</version>
+		</dependency>
   </dependencies>
 	
   <build>
